Fixed gaps on home page

--- a/views/stylesheets/styling.css
+++ b/views/stylesheets/styling.css
@@ -62,7 +62,8 @@ text-decoration: none;
     padding: 16px;
 
     text-align: center;
-    background-color: cadetblue;
+    background-color:aliceblue;
+    height: 570px;
   }
   
 
